validation and image uploader

--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -31,6 +31,11 @@
     <%= f.text_field :cuisine %>
   </div>
 
+  <div class="field">
+  Add an image <br>
+  <%= f.file_field :image %>
+</div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
