--- a/app/views/layouts/restaurant.html.erb
+++ b/app/views/layouts/restaurant.html.erb
@@ -6,6 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+
+    <style>
+      #map {
+        width: 50%;
+        height: 400px;
+        background-color: grey;
+      }
+    </style>
   </head>
 
   <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
