--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -36,6 +36,12 @@
   <%= f.file_field :image %>
   </div>
 
+  <div class="field">
+    <%= f.label :latitude %>
+    <%= f.text_field :latitude %>
+  </div>
+
+
   <div class="actions">
     <%= f.submit %>
   </div>
