--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -27,5 +27,24 @@
   <%= image_tag(@restaurant.image_url.to_s) %>
 </p>
 
+<p><strong>Map:</strong></p>
+    <div id="map"></div>
+    <script>
+      function initMap() {
+        var uluru = {lat: -60, lng: 131.044};
+        var map = new google.maps.Map(document.getElementById('map'), {
+          zoom: 14,
+          center: uluru
+        });
+        var marker = new google.maps.Marker({
+          position: uluru,
+          map: map
+        });
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBR1YVwH0oFBINVt8v5QS_j4TF68oTAVH0&callback=initMap">
+    </script>
+
 <%= link_to 'Edit', edit_restaurant_path(@restaurant) %> |
 <%= link_to 'Back', restaurants_path %>
