--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -31,9 +31,9 @@
     <div id="map"></div>
     <script>
       function initMap() {
-        var uluru = {lat: -60, lng: 131.044};
+        var uluru = {lat: <%= @restaurant.latitude %>, lng: <%= @restaurant.longitude %>};
         var map = new google.maps.Map(document.getElementById('map'), {
-          zoom: 14,
+          zoom: 18,
           center: uluru
         });
         var marker = new google.maps.Marker({
