--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Restaurants</h1>
+<h1 class="page-title">Restaurants</h1>
+
+<div class="row">
+  <div class="col-md-6">
+    What's up
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-md-6">
+    .col-md-6
+  </div>
+  <div class="col-md-6">
+    .col-md-6
+  </div>
+</div>
+
+<div class="row">
+  <div class="col-sm-6 col-md-3">
+    .col-sm-6 col-md-3
+  </div>
+  <div class="col-sm-6 col-md-3">
+    .col-sm-6 col-md-3
+  </div>
+  <div class="col-sm-6 col-md-3">
+    .col-sm-6 col-md-3
+  </div>
+  <div class="col-sm-6 col-md-3">
+    .col-sm-6 col-md-3
+  </div>
+
+</div>
 
 <table>
   <thead>
