--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,6 +1,9 @@
 <p id="notice"><%= notice %></p>
 
-<h1 class="page-title">Restaurants</h1>
+<h1 class="page-title">
+  Restaurants
+  <i class="fa fa-bandcamp" aria-hidden="true"></i>
+</h1>
 
 <div class="row">
   <div class="col-md-6">
